--- a/haskell-to-idris.cabal
+++ b/haskell-to-idris.cabal
@@ -20,6 +20,7 @@ Source-Repository head
 Executable haskell-to-idris
   hs-source-dirs: Haskell
   main-is: Main.hs
-  build-depends: base >= 4.1 && < 5
+  build-depends: base >= 4.1 && < 5,
+                 haskell-src-exts >= 1.13.5 && < 2
   default-language: Haskell2010
 
