--- a/haskell-to-idris.cabal
+++ b/haskell-to-idris.cabal
@@ -21,6 +21,7 @@ Executable haskell-to-idris
   hs-source-dirs: Haskell
   main-is: Main.hs
   build-depends: base >= 4.1 && < 5,
-                 haskell-src-exts >= 1.13.5 && < 2
+                 haskell-src-exts >= 1.13.5 && < 2,
+                 mtl >= 2.1.2 && < 3
   default-language: Haskell2010
 
