--- a/haskell-to-idris.cabal
+++ b/haskell-to-idris.cabal
@@ -20,6 +20,8 @@ Source-Repository head
 Executable haskell-to-idris
   hs-source-dirs: Haskell
   main-is: Main.hs
+  other-modules: Conversion,
+                 Idris.Types
   build-depends: base >= 4.1 && < 5,
                  haskell-src-exts >= 1.13.5 && < 2,
                  mtl >= 2.1.2 && < 3
